update build for cucumber tags