@@ -1,15 +1,10 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.9/userguide/building_java_projects.html in the Gradle documentation.
- */
 
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
     id 'jacoco'
     id 'com.gradleup.shadow' version '8.3.1'
+    id 'se.thinkcode.cucumber-runner' version '0.0.11'
 }
 
 repositories {
@@ -29,7 +24,6 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
@@ -37,7 +31,6 @@ java {
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'edu.wofford.App'
 }
 
@@ -48,9 +41,7 @@ jar {
 }
 
 tasks.named('test') {
-    // Use JUnit Platform for unit tests.
     useJUnitPlatform()
-    systemProperty("cucumber.junit-platform.naming-strategy", "long")
 }
 
 jacoco {
@@ -87,23 +78,11 @@ javadoc {
     exclude 'edu/wofford/GuiMain*'
 }
 
-configurations {
-    cucumberRuntime {
-        extendsFrom testImplementation
-    }
+cucumber {
+    glue = 'gradle.cucumber'
+    plugin = ['pretty', 'html:app/build/reports/cucumber/report.html']
+    main = 'io.cucumber.core.cli.Main'
 }
 
-task cucumber() {
-    dependsOn assemble, compileTestJava
-    doLast {
-        javaexec {
-            main = "io.cucumber.core.cli.Main"
-            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-            args = ['--plugin', 'html:build/reports/cucumber/report.html', '--glue', 'gradle.cucumber', 'src/test/resources']
-            jvmArgs = ["--add-opens=java.base/java.util=ALL-UNNAMED"]
-        }
-    }
-    timeout = Duration.ofMinutes(3)
-}
 
 
